<resources>
    <string name="app_name">ToyStation</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="name_of_kid">Name of Kid</string>
    <string name="name_of_mother">Name of Mother</string>
    <string name="name_of_father">Name of Father</string>
    <string name="mother_phone_no">Mother Phone no.</string>
    <string name="phone_of_father">Phone of Father</string>
    <string name="deposit">Deposit</string>
    <string name="plan_scheme">Plan Scheme</string>
    <string name="registration_charges">Registration Charges</string>
    <string name="date_of_membership">Date of Membership</string>
    <string name="submit">Submit</string>
    <string name="id">id</string>
    <string name="ts">ts</string>
    <string name="tsw">tsw</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_piece">Product Piece</string>
    <string name="mythology">mythology</string>
    <string name="phonics">phonics</string>
    <string name="abc">abc</string>
    <string name="_123">123</string>
    <string name="picture">picture books</string>
    <string name="sparkle">sparkle books</string>
    <string name="series">series</string>
    <string name="flipflap">flipflap books</string>
    <string name="story">story books</string>
    <string name="game">game books</string>
    <string name="book_name">book name</string>
    <string name="Book_id">Book Id</string>
    <string name="Book_name">Book Name</string>
</resources>