<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stocks">

    <RadioGroup
        android:id="@+id/Bookstock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/mythology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mythology" />

        <RadioButton
            android:id="@+id/phonics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonics" />

        <RadioButton
            android:id="@+id/abc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abc" />

        <RadioButton
            android:id="@+id/onetwothree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_123" />

        <RadioButton
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture" />

        <RadioButton
            android:id="@+id/sparkle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sparkle" />

        <RadioButton
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series" />

        <RadioButton
            android:id="@+id/flipflap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flipflap" />

        <RadioButton
            android:id="@+id/story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story" />

        <RadioButton
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game" />
    </RadioGroup>

    <TextView
        android:id="@+id/BookId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Book_id"
        app:layout_constraintStart_toStartOf="@+id/Bookstock"
        app:layout_constraintTop_toBottomOf="@+id/Bookstock" />

    <TextView
        android:id="@+id/BookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/Book_name"
        app:layout_constraintStart_toStartOf="@+id/Bookstock"
        app:layout_constraintTop_toBottomOf="@+id/BookId" />

    <EditText
        android:id="@+id/BookIdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Book ID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BookNameInput"
        app:layout_constraintTop_toBottomOf="@+id/Bookstock" />

    <EditText
        android:id="@+id/BookNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Book Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/BookName"
        app:layout_constraintTop_toBottomOf="@+id/BookIdInput" />


    <Button
        android:id="@+id/submitprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookName"
        app:layout_constraintVertical_bias="0.31" />
</androidx.constraintlayout.widget.ConstraintLayout>