<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stocks">

    <RadioGroup
        android:id="@+id/stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/ts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ts" />

        <RadioButton
            android:id="@+id/tsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tsw" />
    </RadioGroup>

    <TextView
        android:id="@+id/prodId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/product_id"
        app:layout_constraintStart_toStartOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/stock" />

    <TextView
        android:id="@+id/prodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/product_name"
        app:layout_constraintStart_toStartOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/prodId" />

    <EditText
        android:id="@+id/prodIdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Product Id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prodNameInput"
        app:layout_constraintTop_toBottomOf="@+id/stock" />

    <EditText
        android:id="@+id/prodNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Product Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/prodName"
        app:layout_constraintTop_toBottomOf="@+id/prodIdInput" />

    <TextView
        android:id="@+id/prodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/product_price"
        app:layout_constraintStart_toStartOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/prodName" />

    <TextView
        android:id="@+id/prodpiece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/product_piece"
        app:layout_constraintStart_toStartOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice" />

    <EditText
        android:id="@+id/prodPriceInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Product Price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prodNameInput"
        app:layout_constraintTop_toBottomOf="@+id/prodNameInput" />

    <EditText
        android:id="@+id/prodPieceInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Enter Product Piece"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/prodName"
        app:layout_constraintTop_toBottomOf="@+id/prodPriceInput" />

    <Button
        android:id="@+id/submitprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodName"
        app:layout_constraintVertical_bias="0.31" />
</androidx.constraintlayout.widget.ConstraintLayout>